# maxl_blog

./: Cargo.toml  README.md
migrations/2023-07-18-100601_create_users_and_posts/: down.sql  up.sql
src/: apis.rs  database.rs  database_common.rs  handlers_blog.rs  handlers_comment.rs  handlers_test.rs  lib.rs  main.rs  models.rs  paste_id.rs  schema.rs  test_handlers.rs  utils.rs
static/css/: awesome.css
static/css/codestyles/: fruity_no_a.css
static/js/: sha1.js
templates/: 404.html.tera  404.txt  __base__.html.tera  base.html.tera  blog_details.html  blog_details.html.tera  blogs.html.tera  child.html.tera  helo.html  items.html.tera  login.html  manage_blog_edit.html  manage_blog_edit2.html  manage_blog_edit3.html  manage_blogs.html  manage_blogs2.html  parent.html.tera  register.html  test.html  test_temp.html.tera  testhelo.html  user.html.tera
