[package]
name = "maxl_blog"
version = "0.1.0"
authors = ["maxl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_mysql"]