[package]
name = "maxl_blog"
version = "0.1.0"
authors = ["maxl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.26"
rand = "0.8.5"
comrak = "0.18"
syn = "1.0"
quote = "1.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_mysql"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[lib]
proc-macro = true


